--- a/splay.cabal
+++ b/splay.cabal
@@ -20,8 +20,12 @@ Build-Type:             Simple
 Library
   Default-Language:     Haskell2010
   HS-Source-Dirs:       src
-  GHC-Options:          -Wall -O2
+  GHC-Options:          -Wall
   Exposed-Modules:      Data.Splay
   Other-Modules:        Data.Splay.Internal
   Build-Depends:        base >= 4 && < 5
+
+Source-Repository head
+  Type: git
+  Location: https://github.com/dramforever/splay
 
