Github won't load...

--- a/splay.cabal
+++ b/splay.cabal
@@ -27,5 +27,5 @@ Library
 
 Source-Repository head
   Type: git
-  Location: https://github.com/dramforever/splay
+  Location: https://bitbucket.org/dramforever/splay.git
 
