--- a/splay.cabal
+++ b/splay.cabal
@@ -24,8 +24,9 @@ Library
   Default-Language:     Haskell2010
   HS-Source-Dirs:       src
   GHC-Options:          -Wall
-  Exposed-Modules:      Data.Splay
-  Build-Depends:        base >= 4 && < 5
+  Exposed-Modules:      Data.Splay,
+                        Data.Splay.Sequence
+  Build-Depends:        base >= 4.7.0.0 && < 5
 
 Source-Repository head
   Type: git
