Move git repo to github

--- a/splay.cabal
+++ b/splay.cabal
@@ -33,5 +33,5 @@ Library
 
 Source-Repository head
   Type: git
-  Location: https://bitbucket.org/dramforever/splay.git
+  Location: https://github.com/dramforever/splay.git
 
